# videooo-cut

./: .gitignore  LICENSE  README.md  build-mac.sh  build-windows.bat  build-windows.ps1  build.py  create_icons.py  icon.icns  main.py  pyproject.toml  translations.py
