[project]
name = "videooo-cut"
version = "0.1.0"
description = "A cross-platform GUI desktop video editing application with import, preview, rotation, crop, and export features"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pyinstaller>=6.16.0",
    "pyqt6>=6.10.0",
]

[project.scripts]
videooo-cut = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]
